--- a/app/src/main/res/layout/dialog_input_tag.xml
+++ b/app/src/main/res/layout/dialog_input_tag.xml
@@ -6,6 +6,7 @@
     android:padding="@dimen/activity_vertical_margin">
 
     <TextView
+        android:id="@+id/inputHint"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/input_tag"
