--- a/app/src/main/res/layout/report_fragment.xml
+++ b/app/src/main/res/layout/report_fragment.xml
@@ -3,15 +3,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="@dimen/activity_vertical_margin"
-    tools:context=".ui.WalkingSessionFragment">
+    tools:context=".ui.ReportFragment">
 
-
+    <!--<TextView-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:text="Hello" />-->
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/list"
+        android:id="@+id/reportlist"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:listitem="@layout/fragment_walkingsession"
+        tools:listitem="@layout/report_item"
         />
 
 </FrameLayout>
